Updated links to notebooks

--- a/frontend/src/styles/CustomNavbar.scss
+++ b/frontend/src/styles/CustomNavbar.scss
@@ -10,6 +10,9 @@
         &:hover {
             color: #607dc6;
         }
+        &.active-link {
+            color: #fff
+        }
     }
 }
 
